<resources>
    <string name="app_name">Wup Application</string>
    <string name="menu_title_cards">Cards</string>
    <string name="menu_title_transactions">Transactions</string>
    <string name="menu_title_statements">Statements</string>
    <string name="menu_title_more">More</string>
    <string name="main_available_label">Available</string>
    <string name="label_current_balance">Current balance</string>
    <string name="label_min_payment">Min. payment</string>
    <string name="label_due_date">Due date</string>
    <string name="button_details">Details</string>
    <string name="action_bar_main_title">Premium Card</string>
    <string name="action_bar_details_title">Details</string>
    <string name="reservations_label">Reservations/Pending (sum)</string>
    <string name="header_balance_overview">Balance overview</string>
    <string name="header_account_details">Account details</string>
    <string name="header_main_card">Main card</string>
    <string name="carried_balance_label">Balance carried over from last statement</string>
    <string name="total_spendings_label">Total spendings since last statement</string>
    <string name="last_repayment_label">Your last re-payment</string>
    <string name="account_limit_label">Card account limit</string>
    <string name="account_number_label">Card account number</string>
    <string name="card_number_label">Card number</string>
    <string name="card_holder_label">Card holder name</string>
</resources>