<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/available_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/available_container_height"
        android:paddingHorizontal="@dimen/container_padding_horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_available_label"
            android:layout_width="@dimen/available_label_width"
            android:layout_height="@dimen/available_label_height"
            android:layout_marginTop="@dimen/available_label_margin_top"
            android:text="@string/main_available_label"
            android:textColor="@color/status_blue"
            android:textSize="@dimen/available_label_text_size"
            app:fontFamily="Roboto-Regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_available_value"
            android:layout_width="@dimen/available_value_width"
            android:layout_height="@dimen/available_value_height"
            android:gravity="end"
            android:textColor="@color/status_blue"
            android:textSize="@dimen/available_value_text_size"
            app:fontFamily="Roboto-Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/available_chart_orange"
            android:layout_width="match_parent"
            android:layout_height="@dimen/available_chart_orange_height"
            android:layout_marginTop="@dimen/available_chart_orange_margin_top"
            android:background="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_available_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/current_balance_container"
        style="@style/main_card_detail_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_container_height"
        app:layout_constraintTop_toBottomOf="@id/available_container">

        <TextView
            android:id="@+id/current_balance_label"
            style="@style/detail_label"
            android:layout_width="@dimen/detail_label_width"
            android:layout_height="@dimen/detail_label_height"
            android:text="@string/label_current_balance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_balance_currency"
            style="@style/currency"
            android:layout_width="@dimen/detail_currency_width"
            android:layout_height="@dimen/detail_currency_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/current_balance_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/current_balance_value"
            style="@style/detail_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/overlay"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/current_balance_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/min_payment_container"
        style="@style/main_card_detail_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_container_height"
        app:layout_constraintTop_toBottomOf="@id/current_balance_container">

        <TextView
            android:id="@+id/min_payment_label"
            style="@style/detail_label"
            android:layout_width="@dimen/detail_label_width"
            android:layout_height="@dimen/detail_label_height"
            android:text="@string/label_min_payment"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/min_payment_currency"
            style="@style/currency"
            android:layout_width="@dimen/detail_currency_width"
            android:layout_height="@dimen/detail_currency_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/min_payment_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/min_payment_value"
            style="@style/detail_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/overlay"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/min_payment_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/due_date_container"
        style="@style/main_card_detail_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_container_height"
        app:layout_constraintTop_toBottomOf="@id/min_payment_container">

        <TextView
            android:id="@+id/due_date_label"
            style="@style/detail_label"
            android:layout_width="@dimen/detail_label_width"
            android:layout_height="@dimen/detail_label_height"
            android:text="@string/label_due_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/due_date_value"
            style="@style/detail_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_line_height"
        android:background="@color/overlay"
        android:layout_marginLeft="@dimen/container_padding_horizontal"
        android:layout_marginStart="@dimen/container_padding_horizontal"
        app:layout_constraintBottom_toBottomOf="@id/due_date_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/details_button"
        android:layout_width="@dimen/details_button_width"
        android:layout_height="@dimen/details_button_height"
        android:text="@string/button_details"
        style="@style/button_details"
        android:background="@drawable/details_btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/due_date_container" />

</androidx.constraintlayout.widget.ConstraintLayout>